--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/b0106ee4d5.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title><%= title %></title>
 </head>
 
 <body>
+    <div class="head-info">
+        <span><i class="fas fa-phone"></i> +84 164 233 215</span>
+        <span><i class="fas fa-envelope"></i> dacchi6761@gmail.com</span>
+    </div>
+    <%- include('inc/navbar') %>
     <%- content %>
 </body>
 
