--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -1,6 +1,6 @@
 <nav>
-    <div>
-        <i class="fas fa-bars"></i>
+    <div class="nav__menu">
+        <span style="font-size: 2rem;"><i class="fas fa-bars"></i></span>
     </div>
     <ul>
         <li><a href="#">Home</a></li>
@@ -9,9 +9,9 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">About us</a></li>
     </ul>
-    <div>
-        <i class="fas fa-search"></i>
-        <i class="far fa-user"></i>
-        <i class="fas fa-shopping-cart"></i>
+    <div class="nav__icon">
+        <span style="font-size: 1.5rem;"><i class="fas fa-search"></i></span>
+        <span style="font-size: 1.5rem;"><i class="far fa-user"></i></span>
+        <span style="font-size: 1.5rem;"><i class="fas fa-shopping-cart"></i></span>
     </div>
 </nav>
