--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,2 +1,6 @@
 <%- contentFor('content') %>
-<h1 class="text-center">Hello! This is a Home Page</h1>
+<div class="mt-5 text-center banner-container__info">
+    <h1>BLOSSOM SHOP</h1>
+    <h3>Send love to your lover</h3>
+    <a href="#" class="text-danger mt-5 btn border"><span style="font-size: 1.5rem;">Explore</span></a>
+</div>
