--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,8 +17,13 @@
         <span><i class="fas fa-phone"></i> +84 164 233 215</span>
         <span><i class="fas fa-envelope"></i> dacchi6761@gmail.com</span>
     </div>
-    <%- include('inc/navbar') %>
-    <%- content %>
+    <div class="banner-container">
+        <%- include('inc/navbar') %>
+        <%- content %>
+    </div>
+    <footer>
+        <%- include('inc/footer') %>
+    </footer>
 </body>
 
 </html>
