--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,31 @@ html{
     font-size: 18px;
 }
 
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    background-color: rgba(229, 229, 299, 0.5);
+}
+
+footer a p{
+    color: #29d632;
+}
+
+footer a span{
+    color: black;
+}
+
+footer a:hover{
+    text-decoration: none;
+}
+
 nav{
     display: flex;
     flex-direction: row;
-    background-color: #E5E5E5;
+    background-color: rgba(229, 229, 299, 0.5);
     align-items: center;
     justify-content: space-around;
 }
@@ -33,6 +54,17 @@ nav ul li a{
 nav ul li a:hover{
     color: blue;
     text-decoration: none;
+}
+
+.banner-container{
+    width: 100%;
+    height: 25rem;
+    background-image: url('/images/home-banner.jpg');
+}
+
+.banner-container__info a{
+    background-color: #29d632;
+    border-radius: 20%;
 }
 
 .nav__menu{
