Fix project structure

--- a/views/layouts/app.layout.ejs
+++ b/views/layouts/app.layout.ejs
@@ -18,11 +18,11 @@
         <span><i class="fas fa-envelope"></i> dacchi6761@gmail.com</span>
     </div>
     <div class="banner-container">
-        <%- include('inc/navbar') %>
+        <%- include('../inc/navbar') %>
         <%- content %>
     </div>
     <footer>
-        <%- include('inc/footer') %>
+        <%- include('../inc/footer') %>
     </footer>
 </body>
 
