--- a/views/layouts/admin.layout.ejs
+++ b/views/layouts/admin.layout.ejs
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/b0106ee4d5.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/form.css">
     <title><%= title %></title>
 </head>
 
