Valid admin register form in front end

--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -2,25 +2,26 @@
 <div class="d-flex justify-content-center mt-5">
     <div class="d-inline-block border p-5">
         <h1 class="text-center text-uppercase text-primary">Admin Register Form</h1>
-        <form action="/admins/register" method="POST">
+        <form action="/admins/register" method="POST" onsubmit="return validForm()">
             <div>
-                <label for="name">Name:</label>
-                <input type="text" name="name" id="name" placeholder="Enter your name!">
+                <label for="name">Name:</label> <span class="text-danger" data-err="name"></span>
+                <input data-err-bg="name" type="text" name="name" id="name" placeholder="Enter your name!">
             </div>
             <div>
-                <label for="email">Email:</label>
-                <input type="text" name="email" id="email" placeholder="Enter your email!">
+                <label for="email">Email:</label><span class="text-danger" data-err="email"></span>
+                <input data-err-bg="email" type="text" name="email" id="email" placeholder="Enter your email!">
             </div>
             <div>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" placeholder="Create password!">
+                <label for="password">Password:</label><span class="text-danger" data-err="password"></span>
+                <input data-err-bg="password" type="password" name="password" id="password" placeholder="Create password!">
             </div>
             <div>
-                <label for="confirmPassword">Confirm password:</label>
-                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm password!">
+                <label for="confirmpassword">Confirm password:</label><span class="text-danger" data-err="confirmpassword"></span>
+                <input data-err-bg="confirmpassword" type="password" name="confirmpassword" id="confirmpassword" placeholder="Confirm password!">
             </div>
             <br>
             <input class="btn btn-primary" type="submit" value="Register">
         </form>
     </div>
 </div>
+<script src="/js/validAdminRegisterForm.js"></script>
