Update admin register feature

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('content') %>
 <% if (messages) { %>
 <div>
-    <h1><%= messages %></h1>
+    <%- messages %>
 </div>
 <% } %>
 <h1>Form!</h1>
