--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -4,4 +4,22 @@
     <%- messages %>
 </div>
 <% } %>
-<h1>Form!</h1>
+<div class="d-flex justify-content-center mt-5">
+    <div class="d-inline-block border p-5">
+        <h1 class="text-center text-uppercase text-primary">Login</h1>
+        <form action="/admins/login" method="POST" onsubmit="return validForm()">
+            <div>
+                <label for="email">Email:</label><span class="text-danger" data-err="email"></span>
+                <input data-err-bg="email" type="text" name="email" id="email" placeholder="Enter your email!">
+            </div>
+            <div>
+                <label for="password">Password:</label><span class="text-danger" data-err="password"></span>
+                <input data-err-bg="password" type="password" name="password" id="password"
+                    placeholder="Create password!">
+            </div>
+            <br>
+            <input class="btn btn-success" type="submit" value="Login">
+        </form>
+    </div>
+</div>
+<script src="/js/validAdminLoginForm.js"></script>
