--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -20,6 +20,8 @@
             <br>
             <input class="btn btn-success" type="submit" value="Login">
         </form>
+        <br>
+        Don't have account? <a class="text-right" href="/admins/register">Create new account</a>
     </div>
 </div>
 <script src="/js/validAdminLoginForm.js"></script>
