--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -22,6 +22,8 @@
             <br>
             <input class="btn btn-primary" type="submit" value="Register">
         </form>
+        <br>
+        Already have account? <a class="text-success" href="/admins/login">Log in here</a>
     </div>
 </div>
 <script src="/js/validAdminRegisterForm.js"></script>
