--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -4,7 +4,7 @@ html{
     margin: 0;
 }
 
-.msg_success{
+.msg_success, .msg_error{
     color: white;
     display: flex;
     justify-content: center;
@@ -13,5 +13,10 @@ html{
 
 .msg_success *{
     background-color: rgb(17, 90, 15);
+    padding: 1rem;
+}
+
+.msg_error *{
+    background-color: rgb(251, 24, 24);
     padding: 1rem;
 }
