--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -6,6 +6,12 @@
 </div>
 <% } %>
 
+<% if (error != '') { %>
+<div class="msg_error">
+    <h2><%- error %></h2>
+</div>
+<% } %>
+
 <div class="d-flex justify-content-center mt-5">
     <div class="d-inline-block border p-5">
         <h1 class="text-center text-uppercase text-primary">Login</h1>
