--- a/views/admin/blossom.ejs
+++ b/views/admin/blossom.ejs
@@ -1,5 +1,27 @@
 <%- contentFor('content') %>
 
-<div>
-    
+<% if (msg_success != '') { %>
+<div class="msg_success">
+    <h2><%- msg_success %></h2>
 </div>
+<% } %>
+
+<div class="container mt-5">
+    <a class="btn btn-success" href="/admins">Back to Admin Page</a>
+    <h1 class="text-center">Blossom management</h1>
+    <div class="border mt-4 p-3">
+        <h1 class="text-right">Add new Flower: </h1>
+        <form action="/admins/manage/blossoms/add" method="post" onsubmit="return validAdminAddFlowerForm()">
+            <label for="nameForAdd">Name</label><span class="text-danger" data-err="nameForAdd"></span>
+            <input type="text" name="name" id="nameForAdd">
+            <label for="priceForAdd">Price</label><span class="text-danger" data-err="priceForAdd"></span>
+            <input type="text" name="price" id="priceForAdd">
+            <label for="pictureForAdd">Picture</label><span class="text-danger" data-err="pictureForAdd"></span>
+            <input type="file" name="image" id="pictureForAdd">
+            <input class="btn btn-primary" type="submit" value="Add new flower">
+        </form>
+    </div>
+    <br>
+</div>
+
+<script src="/js/validAdminManageFlowerForm.js"></script>
