--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -4,6 +4,11 @@ html{
     margin: 0;
 }
 
+.flowerImage{
+    width: 3rem;
+    height: 3rem;
+}
+
 .msg_success, .msg_error{
     color: white;
     display: flex;
