--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -7,12 +7,16 @@
 <% } %>
 
 <div class="container mt-5">
+    <div>
+        <a class="btn btn-danger float-right" href="/admins/logout">Log out</a>
+    </div>
     <h1 class="text-center">Hello <%- admin.name %>!</h1>
     <div>
         <h3>What do u want?</h3>
         <div>
             <a class="btn btn-primary" href="/admins/manage/blossoms">Blossom Management</a>
             <a class="btn btn-success" href="/admins/manage/categories">Category Management</a>
+            <a class="btn btn-secondary" href="/admins/register">Register new admin</a>
         </div>
     </div>
 </div>
