--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -1,4 +1,8 @@
 <%- contentFor('content') %>
+<div class="d-flex justify-content-between container mt-5">
+    <a class="btn btn-success" href="/admins">Back to Admin Page</a>
+    <a class="btn btn-danger text-right" href="/admins/logout">Log out</a>
+</div>
 <div class="d-flex justify-content-center mt-5">
     <div class="d-inline-block border p-5">
         <h1 class="text-center text-uppercase text-primary">Admin Register Form</h1>
@@ -23,7 +27,6 @@
             <input class="btn btn-primary" type="submit" value="Register">
         </form>
         <br>
-        Already have account? <a class="text-success" href="/admins/login">Log in here</a>
     </div>
 </div>
 <script src="/js/validAdminRegisterForm.js"></script>
