--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -3,7 +3,7 @@
         <span style="font-size: 2rem;"><i class="fas fa-bars"></i></span>
     </div>
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#">Shop</a></li>
         <li style="font-size: 2rem;">&#42; BLOSSOM SHOP &#42;</li>
         <li><a href="#">Blog</a></li>
