--- a/views/layouts/app.layout.ejs
+++ b/views/layouts/app.layout.ejs
@@ -17,8 +17,7 @@
         <span><i class="fas fa-phone"></i> +84 164 233 215</span>
         <span><i class="fas fa-envelope"></i> dacchi6761@gmail.com</span>
     </div>
-    <div class="banner-container">
-        <%- include('../inc/navbar') %>
+    <div>
         <%- content %>
     </div>
     <footer>
