--- a/public/css/user/style.css
+++ b/public/css/user/style.css
@@ -6,7 +6,7 @@ html{
 }
 
 footer{
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -58,13 +58,26 @@ nav ul li a:hover{
 
 .banner-container{
     width: 100%;
-    height: 25rem;
+    height: 23rem;
     background-image: url('/images/home-banner.jpg');
 }
 
 .banner-container__info a{
     background-color: #29d632;
     border-radius: 20%;
+}
+
+.flowerImage{
+    width: 15rem;
+    height: 15rem;
+}
+
+.head-info{
+    width: 100%;
+    height: 1.5rem;
+    background-color: rgb(65, 151, 65);
+    display: flex;
+    justify-content: space-around;
 }
 
 .nav__menu{
@@ -89,12 +102,4 @@ nav ul li a:hover{
 
 .nav__icon span:hover{
     color: blue;
-}
-
-.head-info{
-    width: 100%;
-    height: 1.5rem;
-    background-color: rgb(65, 151, 65);
-    display: flex;
-    justify-content: space-around;
 }
