--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,6 +1,19 @@
 <%- contentFor('content') %>
-<div class="mt-5 text-center banner-container__info">
-    <h1>BLOSSOM SHOP</h1>
-    <h3>Send love to your lover</h3>
-    <a href="#" class="text-danger mt-5 btn border"><span style="font-size: 1.5rem;">Explore</span></a>
+<div class="banner-container">
+    <%- include('../inc/navbar') %>
+    <div class="mt-5 text-center banner-container__info">
+        <h1>BLOSSOM SHOP</h1>
+        <h3>Send love to your lover</h3>
+        <a href="#" class="text-danger mt-5 btn border"><span style="font-size: 1.5rem;">Explore</span></a>
+    </div>
+</div>
+<div class="d-flex flex-wrap">
+    <% flowers.forEach(flower=>{ %>
+        <div class="col col-md-3 text-center mt-5 mb-5">
+            <img class="flowerImage" src="/images/flowers/<%- flower.image %>" alt="<%- flower.name %>">
+            <h4 class="mt-3"><%- flower.name %></h4>
+            <strong><%- flower.price %> $</strong><br>
+            <a href="" class="btn btn-secondary mt-3">Order Now</a>
+        </div>
+    <% }) %>
 </div>
