init user login page

--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -4,14 +4,14 @@
     </div>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="#">Shop</a></li>
+        <li><a href="/flowers">Shop</a></li>
         <li style="font-size: 2rem;">&#42; BLOSSOM SHOP &#42;</li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="/blogs">Blog</a></li>
+        <li><a href="/about">About us</a></li>
     </ul>
     <div class="nav__icon">
         <span style="font-size: 1.5rem;"><i class="fas fa-search"></i></span>
-        <span style="font-size: 1.5rem;"><i class="far fa-user"></i></span>
+        <a href="/users/login"><span style="font-size: 1.5rem;"><i class="far fa-user"></i></span></a>
         <span style="font-size: 1.5rem;"><i class="fas fa-shopping-cart"></i></span>
     </div>
 </nav>
