--- a/public/css/user/style.css
+++ b/public/css/user/style.css
@@ -100,6 +100,10 @@ nav ul li a:hover{
     cursor: pointer;
 }
 
+.nav__icon span{
+    color: black;
+}
+
 .nav__icon span:hover{
-    color: blue;
+    color: lawngreen;
 }
