--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,4 +1,25 @@
 <%- contentFor('content') %>
 
 <%- include('../inc/navbar') %>
-<h1 class="text-center">Login Page</h1>
+<div class="m-5">
+    <h1 class="text-center">Login Page</h1>
+    <div class="d-flex justify-content-center">
+        <form action="/users/login" method="post" onsubmit="return validForm()">
+            <div>
+                <label for="email">Email:</label><span class="text-danger" data-err="email"></span>
+                <input data-err-bg="email" type="text" name="email" id="email" placeholder="Enter your email!">
+            </div>
+            <div>
+                <label for="password">Password:</label><span class="text-danger" data-err="password"></span>
+                <input data-err-bg="password" type="password" name="password" id="password"
+                    placeholder="Create password!">
+            </div>
+            <br>
+            <input class="btn btn-success" type="submit" value="Login">
+        </form>
+    </div>
+    <br>
+    <p class="text-center">Do not have account? <a href="/users/register">Register now</a></p>
+</div>
+
+<script src="/js/validUserLoginForm.js"></script>
