--- a/public/css/user/style.css
+++ b/public/css/user/style.css
@@ -80,6 +80,23 @@ nav ul li a:hover{
     justify-content: space-around;
 }
 
+.msg_success, .msg_error{
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.msg_success *{
+    background-color: rgb(17, 90, 15);
+    padding: 1rem;
+}
+
+.msg_error *{
+    background-color: rgb(251, 24, 24);
+    padding: 1rem;
+}
+
 .nav__menu{
     width: 15%;
 }
