--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,6 +1,19 @@
 <%- contentFor('content') %>
 
 <%- include('../inc/navbar') %>
+
+<% if (msg_success != '') { %>
+<div class="msg_success">
+    <h2><%- msg_success %></h2>
+</div>
+<% } %>
+
+<% if (error != '') { %>
+<div class="msg_error">
+    <h2><%- error %></h2>
+</div>
+<% } %>
+
 <div class="m-5">
     <h1 class="text-center">Login Page</h1>
     <div class="d-flex justify-content-center">
