Authen and author for both admin and user

--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -11,7 +11,7 @@
     </ul>
     <div class="nav__icon">
         <span style="font-size: 1.5rem;"><i class="fas fa-search"></i></span>
-        <a href="/users/login"><span style="font-size: 1.5rem;"><i class="far fa-user"></i></span></a>
+        <a href="/users"><span style="font-size: 1.5rem;"><i class="far fa-user"></i></span></a>
         <span style="font-size: 1.5rem;"><i class="fas fa-shopping-cart"></i></span>
     </div>
 </nav>
