--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -12,6 +12,6 @@
     <div class="nav__icon">
         <span style="font-size: 1.5rem;"><i class="fas fa-search"></i></span>
         <a href="/users"><span style="font-size: 1.5rem;"><i class="far fa-user"></i></span></a>
-        <span style="font-size: 1.5rem;"><i class="fas fa-shopping-cart"></i></span>
+        <a href="/carts"><span style="font-size: 1.5rem;"><i class="fas fa-shopping-cart"></i></span></a>
     </div>
 </nav>
