--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -14,6 +14,12 @@
 </div>
 <% } %>
 
+<% if(msg_notify != '') { %>
+<div class="msg_notify">
+    <h2><%- msg_notify %></h2>
+</div>
+<% } %>
+
 <div class="m-5">
     <h1 class="text-center">Login Page</h1>
     <div class="d-flex justify-content-center">
