--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -26,11 +26,11 @@
         <form action="/users/login" method="post" onsubmit="return validForm()">
             <div>
                 <label for="email">Email:</label><span class="text-danger" data-err="email"></span>
-                <input data-err-bg="email" type="text" name="email" id="email" placeholder="Enter your email!">
+                <input data-err-bg="email" type="text" name="email" id="email" value="diem@gmail.com" placeholder="Enter your email!">
             </div>
             <div>
                 <label for="password">Password:</label><span class="text-danger" data-err="password"></span>
-                <input data-err-bg="password" type="password" name="password" id="password"
+                <input data-err-bg="password" type="password" name="password" value="123" id="password"
                     placeholder="Create password!">
             </div>
             <br>
