--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -13,7 +13,7 @@
             <img class="flowerImage" src="/images/flowers/<%- flower.image %>" alt="<%- flower.name %>">
             <h4 class="mt-3"><%- flower.name %></h4>
             <strong><%- flower.price %> $</strong><br>
-            <a href="" class="btn btn-secondary mt-3">Order Now</a>
+            <a href="/flowers/<%- flower.id %>" class="btn btn-secondary mt-3">Order Now</a>
         </div>
     <% }) %>
 </div>
