--- a/views/inc/navbar.ejs
+++ b/views/inc/navbar.ejs
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav__menu">
-        <span style="font-size: 2rem;"><i class="fas fa-bars"></i></span>
+        <span style="font-size: 2rem;"><img class="nav-item" src="/images/menu-icon.png" alt=""></span>
     </div>
     <ul>
         <li><a href="/">Home</a></li>
@@ -10,8 +10,8 @@
         <li><a href="/about">About us</a></li>
     </ul>
     <div class="nav__icon">
-        <span style="font-size: 1.5rem;"><i class="fas fa-search"></i></span>
-        <a href="/users"><span style="font-size: 1.5rem;"><i class="far fa-user"></i></span></a>
-        <a href="/carts"><span style="font-size: 1.5rem;"><i class="fas fa-shopping-cart"></i></span></a>
+        <span style="font-size: 1.5rem;"><img class="nav-item" src="/images/search-icon.png" alt=""></span>
+        <a href="/users"><span style="font-size: 1.5rem;"><img class="nav-item" src="/images/customer-icon.png" alt=""></span></a>
+        <a href="/carts"><span style="font-size: 1.5rem;"><img class="nav-item" src="/images/cart-icon.png" alt=""></span></a>
     </div>
 </nav>
