--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -33,6 +33,7 @@
                 <input data-err-bg="password" type="password" name="password" value="123" id="password"
                     placeholder="Create password!">
             </div>
+            <input type="hidden" name="flowerPath" value="<%- flowerPath %>">
             <br>
             <input class="btn btn-success" type="submit" value="Login">
         </form>
