--- a/views/home/flower.ejs
+++ b/views/home/flower.ejs
@@ -28,7 +28,7 @@
                 <input form="carts" type="text" name="quantity" id="quantity" value="1">
                 <input form="carts" type="hidden" name="flowerId" value="<%- flower.id %>">
                 <input form="carts" type="hidden" name="flowerPath" value="/flowers/<%- flower.id %>">
-                <input form="carts" class="btn btn-success btn-addToCart ml-4" type="submit" value="Add to cart">
+                <input form="carts" class="btn btn-success ml-4" type="submit" value="Add to cart">
             </div>
             <% } %>
         </div>
