--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -14,6 +14,7 @@
 </div>
 <% } %>
 
-<div>
-    <h1>Hello!</h1>
+<div class="container text-center mt-5 mb-5 d-flex justify-content-between aligh-items-center">
+    <h1>Hello! <%- user.name %></h1>
+    <span><a href="/users/logout" class="btn btn-danger d-block">Logout</a></span>
 </div>
