--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <label for="password">Password:</label><span class="text-danger" data-err="password"></span>
-                <input data-err-bg="password" type="password" name="password" value="123" id="password"
+                <input data-err-bg="password" type="password" name="password" value="12345678" id="password"
                     placeholder="Create password!">
             </div>
             <input type="hidden" name="flowerPath" value="<%- flowerPath %>">
