--- a/views/home/cart.ejs
+++ b/views/home/cart.ejs
@@ -2,15 +2,28 @@
 <%- include('../inc/navbar') %>
 
 <div class="m-5">
-    <h1 class="text-center mb-5">Cart</h1>
-    <div>
+    <h1 class="text-left mb-5">Cart</h1>
+    <div class="container">
         <% if(carts.length == 0){ %>
         <div class="text-center">
             <h3>Your cart is empty!</h3>
             <a href="/flowers" class="btn btn-primary">Back to flowers page!</a>
         </div>
         <% }else{ %>
-        
+        <% carts.forEach(cart=>{ %>
+        <div class="d-flex flex-row align-items-center justify-content-between cartContainer p-2 mb-3">
+            <div style="width: 40%;">
+                <img class="flowerImage" src="/images/flowers/<%- cart.flowerImage %>" alt="">
+                <span class="cartContainer__name ml-5"><%- cart.flowerName %></span>
+            </div>
+            <input type="number" min="0" value="<%- cart.quantity %>">
+                <span class="cartContainer__name"><%- cart.flowerPrice %> $</span>
+            <div>
+                <button class="btn btn-primary">Save</button>
+                <button class="btn btn-danger">Delete</button>
+            </div>
+        </div>
+        <% }) %>
         <% } %>
     </div>
 </div>
